# qa_guru_tests_for_mobile_of_android

./: README.md  config.browserstack.env  config.browserstack.env.example  config.emulation.env  config.py  config.real.env  pyproject.toml  pytest.ini
tests/: conftest.py
tests/android/: test_language.py  test_onboarding.py
tests/android/patched_style/: test_wikipedia.py
wikipedia/model/pages/: languages.py  search.py
wikipedia/utils/: file.py
wikipedia/utils/allure/: attach.py
wikipedia/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
