[tool.poetry]
name = "qa-guru-tests-for-mobile-of-android-"
version = "0.1.0"
description = ""
authors = ["widowblack11 <oksana.prokopenko16@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_tests_for_mobile_of_android_"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.5.0"
selene = {version = "^2.0.0-beta.17", allow-prereleases = true}
Appium-Python-Client = "^2.8.1"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
allure-pytest = "^2.10.0"
requests = "^2.28.1"
pydantic = "^1.10.5"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true
